--- a/index.html
+++ b/index.html
@@ -18,20 +18,87 @@
   <body class="welcome">
     <div class="fabric">
     </div>
-      <div class="wrapper">
-        <div class="header">
-          <img src="logo.png" id="logo"></img>
-          Coming in 2013.<br>
+    <div class="wrapper">
+    <div class="weave-form-wrapper landing">
+        <img src="logo.png" id="logo"></img>
+        <p class="info">
+          We belive people care about energy. We're empowering people to make smart, values-based energy decisions.
+        </p>
 
-
-          <p class="info1">We're weaving social threads to make America's energy systems smarter, safer, and more efficient.<br>Together, we have the energy.</p>
-          <p class="info">Weave looms.</p>
-          <div class="subnote">A <a href="http://communificiency.com/about">Communificiency</a> company</div>
-          <!-- Thanks for your interest in WeaveEnergy. Sign up below to learn more when we launch. -->
-      </div>
-  </body>
-
-</html>
+        <p> Interested? Tells us about yourself and we'll keep you up to date. </p>
+      <form action="https://docs.google.com/forms/d/10FHQ46SijMj3F8o2FZ3lKuRD83rSGKFJsO38pDHtEbQ/formResponse" method="POST" id="ss-form" target="_self" onsubmit="">
+        <ol style="padding-left: 0">
+          <div class="ss-form-question errorbox-good">
+            <div dir="ltr" class="ss-item ss-item-required ss-text">
+              <div class="ss-form-entry">
+                <label class="ss-q-item-label" for="entry_1722904949">
+                  <div class="ss-q-title">
+                    What's your email? <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+                    <span class="ss-required-asterisk">*</span>
+                  </div>
+                  <div class="ss-q-help ss-secondary-text" dir="ltr">
+                  </div>
+                </label>
+                <input type="text" name="entry.1722904949" value="" class="ss-q-short" id="entry_1722904949" dir="auto" aria-required="true">
+              </div>
+            </div>
+          </div>
+          <div class="ss-form-question errorbox-good">
+            <div dir="ltr" class="ss-item ss-item-required ss-text">
+              <div class="ss-form-entry">
+                <label class="ss-q-item-label" for="entry_1419066796">
+                  <div class="ss-q-title">
+                    And your name? <label for="itemView.getDomIdToLabel()" aria-label="(Required field)"></label>
+                    <span class="ss-required-asterisk">*</span>
+                  </div>
+                  <div class="ss-q-help ss-secondary-text" dir="ltr">
+                  </div>
+                </label>
+                <input type="text" name="entry.1419066796" value="" class="ss-q-short" id="entry_1419066796" dir="auto" aria-required="true">
+              </div>
+            </div>
+          </div>
+          <div class="ss-form-question errorbox-good">
+            <div dir="ltr" class="ss-item ss-paragraph-text">
+              <div class="ss-form-entry">
+                <label class="ss-q-item-label" for="entry_826610308">
+                  <div class="ss-q-title">
+                    What other values-based businesses should Weave work with?
+                  </div>
+                  <div class="ss-q-help ss-secondary-text" dir="ltr">
+                    Examples: solar installers, benefit corporations, environmentally responsible products, etc.
+                  </div>
+                </label>
+                <textarea name="entry.826610308" rows="8" cols="0" class="ss-q-long" id="entry_826610308" dir="auto"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="ss-form-question errorbox-good">
+            <div dir="ltr" class="ss-item ss-paragraph-text">
+              <div class="ss-form-entry">
+                <label class="ss-q-item-label" for="entry_565712458">
+                  <div class="ss-q-title">
+                    What questions or feedback do you have about Weave?
+                  </div>
+                  <div class="ss-q-help ss-secondary-text" dir="ltr">
+                  </div>
+                </label>
+                <textarea name="entry.565712458" rows="8" cols="0" class="ss-q-long" id="entry_565712458" dir="auto"></textarea>
+              </div>
+            </div>
+          </div>
+          <input type="hidden" name="draftResponse" value="[] ">
+          <input type="hidden" name="pageHistory" value="0">
+          <div class="ss-item ss-navigate">
+            <div class="ss-form-entry" id="navigation-buttons" dir="ltr" style="display: inline-block">
+              <input type="submit" name="submit" value="Submit" id="ss-submit">
+            </div>
+          </div>
+        </ol>
+      </form>
+    </div>
+    </body>
+  </html>
 
 
 
