--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="weave-form-wrapper landing">
         <img src="logo.png" id="logo"></img>
         <p class="info">
-          We belive people care about energy. We're empowering people to make smart, values-based energy decisions.
+          We believe people care about energy. We're empowering people to make smart, values-based energy decisions.
         </p>
 
         <p> Interested? Tells us about yourself and we'll keep you up to date. </p>
